# egui_node_graph

egui_node_graph/src/: editor_ui.rs  graph.rs  graph_impls.rs  lib.rs  node_finder.rs  traits.rs  ui_state.rs
egui_node_graph_example/: Cargo.toml
egui_node_graph_example/src/: app.rs  hlsl.rs  lib.rs  main.rs  types.rs
