[package]
name = "mme_shader_graph"
version = "0.1.0"
authors = ["zhouhang95"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.25"
rfd = "0.13"
egui_node_graph = { path = "../egui_node_graph" }
anyhow = "1.0"
serde = { version = "1.0", optional = true }
strum = { version = "0.25", features = ["derive"] }
ron = { version = "0.8" }
once_cell = "1"

[features]
default = ["serde", "egui_node_graph/persistence"]
persistence = ["serde", "egui_node_graph/persistence", "eframe/persistence"]

[profile.release]
opt-level = 2 # fast and small wasm
